[gd_scene load_steps=2 format=3 uid="uid://bw5ujwco10vmp"]

[ext_resource type="Script" uid="uid://ptf4dofmynnr" path="res://mundo_logica_test.gd" id="1_sj2ko"]

[node name="MundoLogicaTest" type="Node2D"]
script = ExtResource("1_sj2ko")

[node name="ContenedorPuzles" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="BotonFacil" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(3.946722e-06, 0.9219502, 0.117337994, 1)
text = "Nivel FÃ¡cil"

[node name="BotonMedio" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.85993326, 0.8014561, 7.70092e-07, 1)
text = "Nivel Medio"

[node name="BotonDificil" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.84922284, 0.14056394, 0.11478349, 1)
text = "Nivel Dificil"
